# ocaml-worker-process

./: .gitignore  CHANGES.md  LICENSE  Makefile  README.md  dune-project  worker_process.opam
examples/: dune  find_primes.ml  marshal_test.ml  message.ml  prime_worker.ml  worker.ml
lib/: dune  master.ml  master.mli  worker.ml  worker.mli
